# FleDjSON

./: .gitignore  LICENSE.md  README.md  __init__.py  create-windows-build-package.sh  pyproject.toml  pytest.ini  win-pyinstaller-build.py
docs/: README.md  genericity_verification.md
scripts/: DELETE_CONFIRMATION_TEST.md  capture_logs.py  performance_test.py  run_tests.py  run_tests_simple.py  simple_theme_test.py  test_array_copy.py  test_array_save_bug.py  test_delete_confirmation.py  test_dialog_fixes.py  test_dialog_ui.py  test_field_order_preservation.py  test_field_order_simple.py  test_field_order_simple_execution.py  test_file_optimizations.py  test_flet.py  test_id_auto_alignment.py  test_init_flow.py  test_keyboard_shortcuts.py  test_keyboard_shortcuts_simple.py  test_node_display_order.py  test_phase1_features.py  test_save_as_filename.py  test_save_confirmation.py  test_search.py  test_search_index.py  test_theme_button.py  test_theme_debug.py  test_theme_switch.py  test_ui_array_fix.py
src/: __init__.py  app.py  debug_control.py  error_handling.py  event_hub.py  event_integration.py  feedback.py  flatten_json.py  json_template.py  logging_config.py  main.py  notification_system.py  optimizations.py  translation.py
tests/: conftest.py  mock_error_handling.py  mock_event_hub.py  mock_optimizations.py  test_basic.py  test_basic_manager_coverage.py  test_complex_file.py  test_copy_manager_isolated.py  test_data_manager.py  test_edit_buffer_save.py  test_error_handling.py  test_feedback_integration.py  test_flatten_manager_isolated.py  test_new_managers.py  (+7 more)
(+20 files in other folders)
